# llm-code-injection

./: README.md  agent.py  app.py  pyproject.toml  requirements.txt
.github/workflows/: check_size.yml  sync_hf.yml
src/llm_code_injection/: __init__.py
